retrying to fix big messup on mobile screen breakdown

--- a/CSS/AdminPage_Template_Teams_Style.css
+++ b/CSS/AdminPage_Template_Teams_Style.css
@@ -205,18 +205,11 @@ body {
         top: 12vh;
         left: 10vh;
         right: 40vh;
-        /* left: max(40vh, 20vh); */
         width: calc(67.5%);
-        /* min-width: inherit; */
-        /* min-height: 100%; */
         height: 90vh;
         background-color: white;
         padding-left: 30px;
         padding-right: 30px;
-        /* border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px; */
-        /* border-top-left-radius: 20px;
-        border-top-right-radius: 20px; */
         padding-top: 15px;
         line-height: 1.5;
         padding-bottom: 20px;
